# picodox

./: .gitignore  Cargo.toml  intf.py  justfile  layout.json  pre-commit
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
case/: build.py  picodox-NPTH.drl  picodox-PTH.drl
cli/: Cargo.toml  left.uf2  right.uf2
cli/src/: main.rs  uf2.rs
firmware/: Cargo.toml  justfile  memory.x  nohup.out
firmware/.cargo/: config.toml
firmware/src/: dfu.rs  i2c.rs  key_codes.rs  key_hid.rs  key_map.rs  key_matrix.rs  keyboard.rs  logging.rs  main.rs  neopixel.rs  panic_handler.rs  proto_impl.rs  serial.rs  util.rs
proto/: Cargo.toml
proto/src/: errors.rs  lib.rs  proto_impl.rs
src/: main.rs  serial.rs
