[package]
name = "picodox-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-boot-rp = "0.3.0"
embassy-rp = "0.2.0"
embassy-sync = "0.6.1"
embassy-time = "0.3.2"
embedded-storage-async = "0.4.1"

[profile.release]
debug = true
opt-level = 's'

[[bin]]
name = "picodox-bootloader"
path = "src/main.rs"
test = false
doctest = false
bench = false
