[package]
name = "picodox-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
postcard = { version = "1.0.10", default-features = false, features = ["use-std", "heapless"] }
serialport = "4.6.0"
picodox-proto = { path = "../proto" }
crc = "3.2.1"
cobs = "0.2.3"
bufreaderwriter = "0.2.4"
serde = "1.0.215"
usb_enumeration = "0.2.1"
bitflags = "2.6.0"
zerocopy = { version = "0.8.13", features = ["std", "derive"] }
