[package]
name = "picodox-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
# RT Support Code
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
critical-section = "1.2.0"
# Wire Serialization
heapless = "0.7.0"
serde = { version = "1.0.215", default-features = false }
picodox-proto = { path = "../proto" }
postcard = { version = "1.0.10" }
crc = "3.2.1"
cobs = { version = "0.2.3", default-features = false }
# Embassy
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
embassy-rp = { version = "0.2.0", features = ["critical-section-impl", "time-driver"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
# Misc
circular-buffer = { version = "0.1.9", default-features = false }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
# Logging
defmt = "0.3.8"
pio = "0.2.1"
fixed = "1.28.0"
usbd-hid = "0.8.2"

[[bin]]
name = "picodox-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false
