[package]
name = "picodox-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.0", default-features = false, features = ["experimental-derive"] }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
postcard = { version = "1.0", features = ['use-std'] }
