[package]
name = "picodox-proto"
version = "0.1.0"
edition = "2021"

[features]
std = []

[dependencies]
postcard = { version = "1.0", default-features = false, features = ["experimental-derive", "heapless"] }
crc = "3.2.1"
cobs = { version = "0.2.3", default-features = false }
heapless = "0.7.0"
defmt = "0.3.10"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
postcard = { version = "1.0", features = ['use-std'] }
